- Improved default confirm message to be clear about the action
- Fixed Search page bookmark
- Added support for + in email addresses
- Fixed page total for filter by customer group on admin customer list
- Admin user and Customer email logins were case-sensitive
- Fixed account/invoice error when no order id is supplied
- Fixed HTTP to HTTPS in breadcrumb for account related pages

== OpenCart v1.4.9 ==

FIXES:
- Fixed additional email for loop issue causing "Please Wait" and "Error Send To Required"
- Improved featured products query to make all status checks and return all pertinent data to match latest and bestseller queries.
- If no shipping, tax zone set to buyer's payment zone instead of default store zone
- Session uses full path for session to prevent session sharing
- Removed unneeded products variable from admin order.php
- Removed error on empty language file
- admin/controller/catalog/review.php double text validation cleaned up
- Admin Order Edit now supports product options & updated grand total

ADDED:
- Feature Module uses category-style selector for products
- Extension install/uninstall hook. Now when you install/uninstall extensions, if they have their own install/uninstall functions, they will be triggered.
- Logout destroys session completely. 
- sort by model
- Cache for featured products
- Cache for categories
- Image class supports proper extension name on resize and transparency for png and gif.
- Extensions will "self-clean" if the files are deleted without uninstalling the extension first.
- Restored "Show Out Of Stock warning" option in setting
- Parent Category pages show image next to description
- Select All / Unselect All to all checkbox lists
- Postcode required option added to countries. Now postcode can be required on a per-country basis.
- Coupon code can be entered on Payment AND Confirm page, for those payments that skip the payment page
- New Paypal Improved. Itemized products, PDT support, debug messaging and more.