@@ -1,3 +1,48 @@
+Files Changed Since 1.4.9
+==========================
+upload/admin/controller/catalog/download.php
+upload/admin/controller/payment/authorizenet_aim.php
+upload/admin/controller/sale/customer.php
+upload/admin/controller/setting/setting.php
+upload/admin/language/english/catalog/information.php
+upload/admin/language/english/common/header.php
+upload/admin/language/english/payment/authorizenet_aim.php
+upload/admin/model/report/purchased.php
+upload/admin/model/sale/customer.php
+upload/admin/model/sale/order.php
+upload/admin/model/tool/image.php
+upload/admin/view/javascript/ckeditor/config.js
+upload/admin/view/template/payment/authorizenet_aim.tpl
+upload/admin/view/template/sale/order_form.tpl
+upload/catalog/controller/account/address.php
+upload/catalog/controller/account/create.php
+upload/catalog/controller/account/edit.php
+upload/catalog/controller/account/history.php
+upload/catalog/controller/account/invoice.php
+upload/catalog/controller/account/newsletter.php
+upload/catalog/controller/account/password.php
+upload/catalog/controller/account/success.php
+upload/catalog/controller/checkout/guest_step_1.php
+upload/catalog/controller/common/maintenance.php
+upload/catalog/controller/information/contact.php
+upload/catalog/controller/module/cart.php
+upload/catalog/controller/payment/authorizenet_aim.php
+upload/catalog/controller/payment/liqpay.php
+upload/catalog/controller/payment/pp_standard.php
+upload/catalog/controller/payment/sagepay.php
+upload/catalog/controller/product/search.php
+upload/catalog/model/checkout/order.php
+upload/catalog/view/javascript/jquery/ajax_add.js
+upload/catalog/view/theme/default/template/payment/liqpay.tpl
+upload/system/library/customer.php
+upload/system/library/image.php
+upload/system/library/mail.php
+upload/system/library/session.php
+upload/system/library/user.php
+upload/system/startup.php
+
+
+
 Files Changed Since 1.4.8b
 ==========================
 upload/.htaccess.txt
