@@ -93,7 +93,8 @@ final class Mail {
 			$header .= 'Subject: ' . $this->subject . $this->newline;
 		}
 	
-		$header .= 'From: ' . $this->sender . '<' . $this->from . '>' . $this->newline;
+		//$header .= 'From: ' . $this->sender . '<' . $this->from . '>' . $this->newline;
+		$header .= 'From: "' . $this->sender . '" <' . $this->from . '>' . $this->newline;
 		$header .= 'Reply-To: ' . $this->sender . '<' . $this->from . '>' . $this->newline;   
 		$header .= 'Return-Path: ' . $this->from . $this->newline;
 		$header .= 'X-Mailer: PHP/' . phpversion() . $this->newline; 
